[gd_scene load_steps=18 format=3 uid="uid://elu5weic5047"]

[ext_resource type="Script" uid="uid://d1jrqiont4u2h" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_2d/projectile_2d.gd" id="1_i8tgq"]
[ext_resource type="Texture2D" uid="uid://d0u3dixs4nwan" path="res://addons/godot_projectile_engine/examples/asset/bullet/bullet_big_cirle_1.png" id="2_nfe63"]
[ext_resource type="Script" uid="uid://ntvjnkgxdlex" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_speed.gd" id="3_erm13"]
[ext_resource type="Script" uid="uid://crj82fqrovcoh" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_direction.gd" id="4_lphvn"]
[ext_resource type="Script" uid="uid://btxma76cc7y4j" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_life_time.gd" id="4_yul1m"]
[ext_resource type="Script" uid="uid://d4hd0gjvv2j67" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_position.gd" id="5_ouhur"]
[ext_resource type="Script" uid="uid://b1xv2gjlrcmkq" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_rotation.gd" id="6_6r6gm"]
[ext_resource type="Script" uid="uid://bbritea6jojfc" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_transform_2d.gd" id="7_6r6gm"]
[ext_resource type="Script" uid="uid://bno8vtwtq4hqg" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_life_distance.gd" id="7_cns50"]
[ext_resource type="Script" uid="uid://coycecwx8ox0y" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_scale.gd" id="8_inat4"]
[ext_resource type="Script" uid="uid://bydmfadokwadh" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_destroy.gd" id="9_7wm4u"]
[ext_resource type="Script" uid="uid://coast68s7ikf3" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_skew.gd" id="10_56u1b"]
[ext_resource type="Script" uid="uid://brtdxka8818es" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_bouncing.gd" id="10_f0xrw"]
[ext_resource type="Script" uid="uid://cqdm1c0ub256y" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_piercing.gd" id="11_ouhur"]
[ext_resource type="Script" uid="uid://duln11jkefv58" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_homing.gd" id="12_y7es0"]
[ext_resource type="Script" uid="uid://c45xx8tm7yin1" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component_trigger.gd" id="13_inat4"]
[ext_resource type="Script" uid="uid://bebbnvdrrml2k" path="res://addons/godot_projectile_engine/core/projectile_template/projectile_template_node_2d/projectile_component_2d/projectile_component.gd" id="17_inat4"]

[node name="Projectile2dTest1" type="Area2D"]
script = ExtResource("1_i8tgq")
metadata/_custom_type_script = "uid://d1jrqiont4u2h"

[node name="BulletBigCirle1" type="Sprite2D" parent="."]
texture = ExtResource("2_nfe63")

[node name="ProjectileComponent" type="Node2D" parent="."]

[node name="ProjectileComponentTransform2D" type="Node" parent="ProjectileComponent" node_paths=PackedStringArray("projectile_position", "projectile_rotation", "projectile_scale", "projectile_skew")]
script = ExtResource("7_6r6gm")
projectile_position = NodePath("ProjectileComponentPosition")
projectile_rotation = NodePath("ProjectileComponentRotation")
projectile_scale = NodePath("ProjectileComponentScale")
projectile_skew = NodePath("ProjectileComponentSkew")
metadata/_custom_type_script = "uid://bbritea6jojfc"

[node name="ProjectileComponentPosition" type="Node" parent="ProjectileComponent/ProjectileComponentTransform2D" node_paths=PackedStringArray("projectile_speed", "projectile_direction")]
script = ExtResource("5_ouhur")
projectile_speed = NodePath("ProjectileComponentSpeed")
projectile_direction = NodePath("ProjectileComponentDirection")
metadata/_custom_type_script = "uid://d4hd0gjvv2j67"

[node name="ProjectileComponentSpeed" type="Node" parent="ProjectileComponent/ProjectileComponentTransform2D/ProjectileComponentPosition"]
script = ExtResource("3_erm13")
metadata/_custom_type_script = "uid://ntvjnkgxdlex"

[node name="ProjectileComponentDirection" type="Node" parent="ProjectileComponent/ProjectileComponentTransform2D/ProjectileComponentPosition"]
script = ExtResource("4_lphvn")
metadata/_custom_type_script = "uid://crj82fqrovcoh"

[node name="ProjectileComponentScale" type="Node" parent="ProjectileComponent/ProjectileComponentTransform2D"]
script = ExtResource("8_inat4")
metadata/_custom_type_script = "uid://coycecwx8ox0y"

[node name="ProjectileComponentSkew" type="Node" parent="ProjectileComponent/ProjectileComponentTransform2D"]
script = ExtResource("10_56u1b")
metadata/_custom_type_script = "uid://coast68s7ikf3"

[node name="ProjectileComponentRotation" type="Node" parent="ProjectileComponent/ProjectileComponentTransform2D"]
script = ExtResource("6_6r6gm")
metadata/_custom_type_script = "uid://b1xv2gjlrcmkq"

[node name="ProjectileComponentLifeTime" type="Node" parent="ProjectileComponent"]
script = ExtResource("4_yul1m")
metadata/_custom_type_script = "uid://btxma76cc7y4j"

[node name="ProjectileComponentLifeDistance" type="Node" parent="ProjectileComponent" node_paths=PackedStringArray("projectile_transform_2d")]
script = ExtResource("7_cns50")
projectile_transform_2d = NodePath("../ProjectileComponentTransform2D")
metadata/_custom_type_script = "uid://bno8vtwtq4hqg"

[node name="ProjectileComponentPiercing" type="Node" parent="ProjectileComponent"]
script = ExtResource("11_ouhur")
metadata/_custom_type_script = "uid://cqdm1c0ub256y"

[node name="ProjectileComponentTrigger" type="Node" parent="ProjectileComponent"]
script = ExtResource("13_inat4")
metadata/_custom_type_script = "uid://c45xx8tm7yin1"

[node name="ProjectileComponentDestroy" type="Node" parent="ProjectileComponent"]
script = ExtResource("9_7wm4u")
metadata/_custom_type_script = "uid://bydmfadokwadh"

[node name="ProjectileComponentHoming" type="Node" parent="ProjectileComponent"]
script = ExtResource("12_y7es0")
metadata/_custom_type_script = "uid://duln11jkefv58"

[node name="ProjectileComponentBouncing" type="Node" parent="ProjectileComponent"]
script = ExtResource("10_f0xrw")
metadata/_custom_type_script = "uid://brtdxka8818es"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="ProjectileComponent2" type="Node" parent="."]
script = ExtResource("17_inat4")
metadata/_custom_type_script = "uid://bebbnvdrrml2k"
